# sanef-election-dashboard-etl

./: .gitignore  Dockerfile  README.md  SANEF_Uploader.py  SANEF_Uploader.sh  audit opinions  data cleaning.py  pyproject.toml
Number of hungs and outright majority councils etl/: 2016_Election_Number_of_hung_and_outright_majority.ipynb
audit opinions etl/: report cleaning.py
delimitations/: Munis.csv  MunisMap.csv  Wards.csv
