[tool.poetry]
name = "sanef-election-dashboard-etl"
version = "0.1.0"
description = ""
authors = ["Dirk Meerkotter <dirk@openup.org.za>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
requests = "^2.26.0"
pyodbc = "^4.0.32"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
